--- a/frontend/src/app/modules/+accounts/components/history/history.component.scss
+++ b/frontend/src/app/modules/+accounts/components/history/history.component.scss
@@ -10,5 +10,20 @@
 
   &__table {
     width: 100%;
+    background-color: transparent;
+  }
+}
+
+.table {
+  &__tr {
+    background-color: white;
+
+    &_grouped {
+      background-color: inherit;
+
+      span {
+        font-weight: bold;
+      }
+    }
   }
 }
