--- a/frontend/src/app/modules/+accounts/components/history/history.component.html
+++ b/frontend/src/app/modules/+accounts/components/history/history.component.html
@@ -1,22 +1,28 @@
 <div class="history">
-  <table class="history__table" mat-table [dataSource]="payments">
+  <table class="history__table table" mat-table [dataSource]="payments">
     <ng-container matColumnDef="category">
       <th mat-header-cell *matHeaderCellDef>Категория</th>
-      <td mat-cell *matCellDef="let element">{{ element.category.name }}</td>
+      <td mat-cell *matCellDef="let element">{{ categories[element.categoryId].name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
       <th mat-header-cell *matHeaderCellDef>Сумма</th>
-      <td mat-cell *matCellDef="let element">{{ element.amount }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.amount | currency: currencies[element.currencyId].name : 'symbol-narrow' }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="groupHeader">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element" colspan="2">{{ element.grouped }}</td>
+      <td mat-cell *matCellDef="let element" colspan="2">
+        <span>
+          {{ element.grouped }}
+        </span>
+      </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['groupHeader']; when: isGroup"></tr>
+    <tr class="table__tr" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr class="table__tr" mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr class="table__tr table__tr_grouped" mat-row *matRowDef="let row; columns: ['groupHeader']; when: isGroup"></tr>
   </table>
 </div>
