--- a/frontend/src/app/modules/+accounts/containers/history-container/history-container.component.html
+++ b/frontend/src/app/modules/+accounts/containers/history-container/history-container.component.html
@@ -1,1 +1,7 @@
-<bg-history [payments]="payments$ | async"> </bg-history>
+<ng-container *ngIf="currentAccount$ | async as currentAccount">
+  <bg-history
+    [payments]="currentAccount.payments"
+    [categories]="categories$ | async"
+    [currencies]="currencies$ | async"
+  ></bg-history>
+</ng-container>
