--- a/frontend/src/app/modules/+accounts/containers/statistics-container/statistics-container.component.html
+++ b/frontend/src/app/modules/+accounts/containers/statistics-container/statistics-container.component.html
@@ -1,3 +1,7 @@
-<ng-container *ngIf="payments$ | async as payments">
-  <bg-statistics [payments]="payments"></bg-statistics>
+<ng-container *ngIf="currentAccount$ | async as currentAccount">
+  <bg-statistics
+    [payments]="currentAccount.payments"
+    [categories]="categories$ | async"
+    [currencies]="currencies$ | async"
+  ></bg-statistics>
 </ng-container>
