--- a/frontend/src/app/modules/+accounts/modals/create-account/create-account.component.html
+++ b/frontend/src/app/modules/+accounts/modals/create-account/create-account.component.html
@@ -17,6 +17,11 @@
         <textarea matInput formControlName="description"></textarea>
       </mat-form-field>
 
+      <mat-form-field class="form--control">
+        <mat-label>Остаточная сумма</mat-label>
+        <input matInput type="number" formControlName="amount">
+      </mat-form-field>
+
       <mat-form-field class="form--control" *ngIf="currencies$ | async as currencies">
         <mat-label>Валюта</mat-label>
         <mat-select
