[Backend] Add loading and creating transactions

--- a/frontend/src/app/core/components/header/header.component.html
+++ b/frontend/src/app/core/components/header/header.component.html
@@ -13,7 +13,7 @@
     <button (click)="logout.emit()">Logout</button>
   </div>
 
-  <nav mat-tab-nav-bar backgroundColor="primary">
+  <!-- <nav mat-tab-nav-bar backgroundColor="primary">
     <a
       mat-tab-link
       *ngFor="let link of links"
@@ -24,5 +24,5 @@
     >
       {{ link.label }}
     </a>
-  </nav>
+  </nav> -->
 </header>
