--- a/frontend/src/app/modules/+transactions/components/transactions-history/transactions-history.component.html
+++ b/frontend/src/app/modules/+transactions/components/transactions-history/transactions-history.component.html
@@ -1,14 +1,74 @@
+<div class="history">
+  <table class="history__table table" mat-table [dataSource]="transactions">
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef>Категория</th>
+      <td mat-cell *matCellDef="let element">
+        <div *ngIf="element.accountIncome !== element.accountOutcome; then transfer else payment"></div>
 
-<mat-card>
-  <mat-card-content>
+        <ng-template #transfer>
+          Перевод
+        </ng-template>
 
-    <mat-list>
-      <mat-list-item
-        *ngFor="let transaction of transactions"
-      >
-        {{ transaction.id }}
-      </mat-list-item>
-     </mat-list>
+        <ng-template #payment>
+          Тут будет категория
+        </ng-template>
+      </td>
+    </ng-container>
 
-  </mat-card-content>
-</mat-card>
+    <ng-container matColumnDef="amount">
+      <th mat-header-cell *matHeaderCellDef>Сумма</th>
+      <td mat-cell *matCellDef="let element">
+        <div *ngIf="element.accountIncome !== element.accountOutcome; then transfer else payment"></div>
+
+        <ng-template #transfer>
+          {{ element.outcome }} -> {{ element.income }}
+        </ng-template>
+
+        <ng-template #payment>
+          <div *ngIf="element.income">
+            +{{ element.income }}
+          </div>
+          <div *ngIf="element.outcome">
+            -{{ element.outcome }}
+          </div>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="account">
+      <th mat-header-cell *matHeaderCellDef>Счет</th>
+      <td mat-cell *matCellDef="let element">
+        <div *ngIf="element.accountIncome !== element.accountOutcome; then transfer else payment"></div>
+
+        <ng-template #transfer>
+          {{ element.accountIncome }} -> {{ element.accountOutcome }}
+        </ng-template>
+
+        <ng-template #payment>
+          <div *ngIf="element.income">
+            {{ element.accountIncome }}
+          </div>
+          <div *ngIf="element.outcome">
+            {{ element.accountOutcome }}
+          </div>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="groupHeader">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element" colspan="2">
+        <span>
+          {{ element.grouped.key }}
+        </span>
+        <span>
+          {{ element.grouped.day }}
+        </span>
+      </td>
+    </ng-container>
+
+    <tr class="table__tr" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr class="table__tr" mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr class="table__tr table__tr_grouped" mat-row *matRowDef="let row; columns: ['groupHeader']; when: isGroup"></tr>
+  </table>
+</div>
