[Frontend] Add filter to transactions

--- a/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
+++ b/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
@@ -1,6 +1,12 @@
 <mat-card>
 
-  <mat-card-title *ngIf="!isTransactionBlockShown" (click)="isTransactionBlockShown = !isTransactionBlockShown">
+  <mat-card-title *ngIf="!isTransactionBlockShown">
+    <button
+      mat-icon-button
+      (click)="isTransactionBlockShown = !isTransactionBlockShown"
+    >
+      <mat-icon>add</mat-icon>
+    </button>
     Добавить транзакцию
   </mat-card-title>
 
