--- a/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.html
+++ b/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.html
@@ -1,1 +1,35 @@
-<p>transactions-filter works!</p>
+<mat-card>
+
+  <mat-card-title>
+    Мои счета
+  </mat-card-title>
+
+  <mat-card-subtitle>
+
+    <div>
+      <span>Общая сумма: </span>
+      <span>{{ totalAmount | currency : 'RUB' : 'symbol-narrow' }}</span>
+    </div>
+
+    <div>
+      <span>Должен: </span>
+      <span>{{ debt | currency : 'RUB' : 'symbol-narrow' }}</span>
+    </div>
+
+
+  </mat-card-subtitle>
+
+  <mat-card-content>
+    <mat-selection-list
+      (selectionChange)="onSelectionChange($event)"
+    >
+      <mat-list-option
+        *ngFor="let account of accounts"
+        [value]="account.id"
+      >
+        {{ account.name }}
+      </mat-list-option>
+    </mat-selection-list>
+  </mat-card-content>
+
+</mat-card>
