--- a/frontend/src/app/modules/+transactions/containers/transactions-container/transactions-container.component.html
+++ b/frontend/src/app/modules/+transactions/containers/transactions-container/transactions-container.component.html
@@ -2,8 +2,11 @@
 
   <div class="transactions">
     <div class="transactions__wrapper">
-      <div class="transactions__filter">
-        <bg-transactions-filter></bg-transactions-filter>
+      <div class="transactions__filter" *ngIf="accounts$ | async as accounts">
+        <bg-transactions-filter
+          [accounts]="accounts"
+          (filterChange)="onFilterChange($event)"
+        ></bg-transactions-filter>
       </div>
 
       <div class="transactions__main">
