[Frontend] Code refactoring

--- a/frontend/src/app/modules/+transactions/components/transactions-history/transactions-history.component.scss
+++ b/frontend/src/app/modules/+transactions/components/transactions-history/transactions-history.component.scss
@@ -23,4 +23,14 @@
       }
     }
   }
+
+  &__td {
+
+    &__account {
+      &__inner {
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
 }
