--- a/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
+++ b/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
@@ -1,6 +1,9 @@
-<mat-card>
+<mat-card class="">
 
-  <mat-card-title *ngIf="!isTransactionBlockShown">
+  <mat-card-title
+    class="mat-card-title"
+    *ngIf="!isTransactionBlockShown"
+  >
     <button
       mat-icon-button
       (click)="isTransactionBlockShown = !isTransactionBlockShown"
@@ -31,19 +34,16 @@
             Перевод
           </mat-radio-button>
         </mat-radio-group>
-    
-  
         <div>
-  
-          <div *ngIf="transactionTypeControl.value !== 'transfer'">
 
+          <div *ngIf="transactionTypeControl.value !== 'transfer'">
             <div class="form__control-group">
               <mat-form-field class="form__control">
                 <mat-label>Счет</mat-label>
-                <mat-select (selectionChange)="onAccountIncomeChange($event)">
+                <mat-select (selectionChange)="onAccountChange($event)">
                   <mat-option
                     *ngFor="let account of accounts"
-                    [value]="account.id"
+                    [value]="account"
                   >
                     {{ account.name }}
                   </mat-option>
@@ -53,7 +53,7 @@
 
             <mat-form-field class="form__control">
               <mat-label>Сумма</mat-label>
-              <input matInput type="number" formControlName="income">
+              <input matInput type="number" formControlName="income" formControlName="outcome">
             </mat-form-field>
   
             <div class="form__control-group">
@@ -139,7 +139,6 @@
             mat-flat-button
             color="primary"
             type="submit"
-            [disabled]="form.invalid"
           >
             Добавить
           </button>
