--- a/frontend/src/app/modules/+transactions/components/transactions-history/transactions-history.component.html
+++ b/frontend/src/app/modules/+transactions/components/transactions-history/transactions-history.component.html
@@ -10,7 +10,7 @@
         </ng-template>
 
         <ng-template #payment>
-          Тут будет категория
+          {{ categories[element.categoryId]?.name }}
         </ng-template>
       </td>
     </ng-container>
@@ -21,14 +21,22 @@
         <div *ngIf="element.accountIncome !== element.accountOutcome; then transfer else payment"></div>
 
         <ng-template #transfer>
-          {{ element.outcome }} -> {{ element.income }}
+          <div class="table__td__account__inner">
+            <span>
+              {{ element.outcome }}
+            </span>
+            <mat-icon>arrow_right_alt</mat-icon>
+            <span>
+              {{ element.income }}
+            </span>
+          </div>
         </ng-template>
 
         <ng-template #payment>
-          <div *ngIf="element.income">
+          <div *ngIf="element.income" style="color: green;">
             +{{ element.income }}
           </div>
-          <div *ngIf="element.outcome">
+          <div *ngIf="element.outcome" style="color: red;">
             -{{ element.outcome }}
           </div>
         </ng-template>
@@ -41,15 +49,23 @@
         <div *ngIf="element.accountIncome !== element.accountOutcome; then transfer else payment"></div>
 
         <ng-template #transfer>
-          {{ element.accountIncome }} -> {{ element.accountOutcome }}
+          <div class="table__td__account__inner">
+            <span>
+              {{ accountsEntity[element.accountIncome]?.name }}
+            </span>
+            <mat-icon>arrow_right_alt</mat-icon>
+            <span>
+              {{ accountsEntity[element.accountOutcome]?.name }}
+            </span>
+          </div>
         </ng-template>
 
         <ng-template #payment>
           <div *ngIf="element.income">
-            {{ element.accountIncome }}
+            {{ accountsEntity[element.accountIncome]?.name }}
           </div>
           <div *ngIf="element.outcome">
-            {{ element.accountOutcome }}
+            {{ accountsEntity[element.accountOutcome]?.name }}
           </div>
         </ng-template>
       </td>
@@ -57,13 +73,29 @@
 
     <ng-container matColumnDef="groupHeader">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element" colspan="3">
+      <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
         <span>
           {{ element.grouped.key }}
         </span>
         <span>
-          {{ element.grouped.day }}
+          ({{ element.grouped.day }})
         </span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+
+        <div>
+
+          <button
+            mat-icon-button
+            (click)="deleteTransaction.emit(element.id)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
       </td>
     </ng-container>
 
