--- a/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
+++ b/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
@@ -39,8 +39,13 @@
           <div *ngIf="transactionTypeControl.value !== 'transfer'">
             <div class="form__control-group">
               <mat-form-field class="form__control">
-                <mat-label>Счет</mat-label>
-                <mat-select (selectionChange)="onAccountChange($event)">
+                <mat-label>
+                  <span>Счет</span>
+                </mat-label>
+                <mat-select
+                  #account
+                  (selectionChange)="onAccountChange($event)"
+                >
                   <mat-option
                     *ngFor="let account of accounts"
                     [value]="account"
@@ -52,7 +57,14 @@
             </div>
 
             <mat-form-field class="form__control">
-              <mat-label>Сумма</mat-label>
+              <mat-label>
+                <span>
+                  Сумма
+                </span>
+                <span *ngIf="account?.value">
+                  {{ currencies[account?.value.currencyId].name }}
+                </span>
+              </mat-label>
               <input matInput type="number" formControlName="income" formControlName="outcome">
             </mat-form-field>
   
