--- a/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.scss
+++ b/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.scss
@@ -1,3 +1,14 @@
 :host {
   display: block;
 }
+
+.filter {
+  &__total-info {
+    display: flex;
+    justify-content: space-between;
+
+    * + * {
+      margin-left: 1rem;
+    }
+  }
+}
