--- a/frontend/src/app/modules/+sign-up/sign-up/sign-up.component.html
+++ b/frontend/src/app/modules/+sign-up/sign-up/sign-up.component.html
@@ -1,15 +1,49 @@
-<form [formGroup]="form" (submit)="onSubmit($event)">
+<div class="root">
+  <mat-card class="sign-up">
+    <mat-card-title>
+      Регистрация
+    </mat-card-title>
 
-  <label for="login">Login</label>
-  <input formControlName="login" id="login" type="text">
+    <mat-card-content>
+      <form class="sign-up__form form" [formGroup]="form" (submit)="onSubmit($event)">
 
-  <label for="email">Email</label>
-  <input formControlName="email" id="email" type="email">
+        <mat-form-field class="form__control">
+          <mat-label>Логин</mat-label>
+          <input matInput formControlName="login" type="text">
+          <mat-icon matSuffix>login</mat-icon>
+        </mat-form-field>
 
-  <label for="password">password</label>
-  <input formControlName="password" id="password" type="password">
+        <mat-form-field class="form__control">
+          <mat-label>Почта</mat-label>
+          <input matInput formControlName="email" type="email">
+          <mat-icon matSuffix>email</mat-icon>
+        </mat-form-field>
 
-  <button type="submit">
-    Sign Up
-  </button>
-</form>
+        <mat-form-field class="form__control">
+          <mat-label>Пароль</mat-label>
+          <input matInput formControlName="password" [type]="isPasswordShown ? 'text' : 'password'">
+          <mat-icon matSuffix (click)="isPasswordShown = !isPasswordShown">remove_red_eye</mat-icon>
+        </mat-form-field>
+      </form>
+
+      <div class="form__actions">
+        <button
+          mat-flat-button
+          color="primary"
+          type="submit"
+          class="form__button"
+          [disabled]="form.invalid"
+        >
+          Зарегистрироваться
+        </button>
+  
+        <a
+          class="form__button"
+          [routerLink]="['/signin']"
+        >
+          Войти
+        </a>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
