[Frontend] Code refactoring

--- a/frontend/src/app/modules/+accounts/modals/create-account/create-account.component.html
+++ b/frontend/src/app/modules/+accounts/modals/create-account/create-account.component.html
@@ -5,7 +5,7 @@
     <form
       class="account--form form"
       [formGroup]="form"
-      (submit)="onSubmit($event)"
+      (ngSubmit)="onSubmit()"
     >
       <mat-form-field class="form--control">
         <mat-label>Название</mat-label>
