--- a/frontend/src/app/modules/+accounts/modals/create-payment/create-payment.component.html
+++ b/frontend/src/app/modules/+accounts/modals/create-payment/create-payment.component.html
@@ -1,6 +1,6 @@
 <div class="root">
   <div class="payment">
-    <form class="payment__form form" [formGroup]="form" (submit)="onSubmit($event)">
+    <form class="payment__form form" [formGroup]="form" (ngSubmit)="onSubmit()">
 
       <mat-radio-group
         class="form__control"
