--- a/frontend/src/app/modules/+sign-up/sign-up/sign-up.component.html
+++ b/frontend/src/app/modules/+sign-up/sign-up/sign-up.component.html
@@ -5,7 +5,7 @@
     </mat-card-title>
 
     <mat-card-content>
-      <form class="sign-up__form form" [formGroup]="form" (submit)="onSubmit($event)">
+      <form class="sign-up__form form" [formGroup]="form" (ngSubmit)="onSubmit()">
 
         <mat-form-field class="form__control">
           <mat-label>Логин</mat-label>
