--- a/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.scss
+++ b/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.scss
@@ -8,3 +8,15 @@
 .accounts {
   margin-right: 1.6rem;
 }
+
+.link {
+  &__name {
+    display: block;
+  }
+
+  &__description {
+    display: block;
+    font-size: 1.2rem;
+    color: #999;
+  }
+}
