--- a/frontend/src/app/core/components/spinner/spinner.component.scss
+++ b/frontend/src/app/core/components/spinner/spinner.component.scss
@@ -4,8 +4,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(white, 0.3);
+  background-color: rgba(white, 0.7);
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 99999;
 }
