--- a/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.scss
+++ b/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.scss
@@ -6,6 +6,7 @@
   &__total-info {
     display: flex;
     justify-content: space-between;
+    margin-top: 1rem;
 
     * + * {
       margin-left: 1rem;
