--- a/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
+++ b/frontend/src/app/modules/+transactions/components/add-transaction/add-transaction.component.html
@@ -1,5 +1,4 @@
 <mat-card>
-
   <mat-card-title
     class="mat-card-title"
     *ngIf="!isTransactionBlockShown"
@@ -10,7 +9,9 @@
     >
       <mat-icon>add</mat-icon>
     </button>
-    Добавить транзакцию
+    <span>
+      Добавить транзакцию
+    </span>
   </mat-card-title>
 
   <mat-card-content>
@@ -19,11 +20,9 @@
         *ngIf="isTransactionBlockShown"
         [formGroup]="form"
         (ngSubmit)="onSubmit()"
+        class="add-transaction__form form"
       >
-        <mat-radio-group
-          class="form__control"
-          formControlName="transactionType"
-        >
+        <mat-radio-group class="form__control form__control_radio" formControlName="transactionType">
           <mat-radio-button class="form__radio" value="expenses">
             Расходы
           </mat-radio-button>
@@ -35,116 +34,103 @@
           </mat-radio-button>
         </mat-radio-group>
 
-        <mat-form-field>
+        <div *ngIf="transactionTypeControl.value !== 'transfer'">
+          <mat-form-field class="form__control">
+            <mat-label>
+              <span>Счет</span>
+            </mat-label>
+            <mat-select #account (selectionChange)="onAccountChange($event)">
+              <mat-option
+                *ngFor="let account of accounts"
+                [value]="account"
+              >
+                {{ account.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="form__control">
+            <mat-label>
+              <span>
+                Сумма
+              </span>
+              <span *ngIf="account?.value">
+                {{ currencies[account?.value.currencyId].name }}
+              </span>
+            </mat-label>
+            <input *ngIf="transactionTypeControl.value === 'incomes'" matInput type="number" formControlName="income">
+            <input *ngIf="transactionTypeControl.value === 'expenses'" matInput type="number" formControlName="outcome">
+          </mat-form-field>
+
+          <mat-form-field class="form__control" *ngIf="categories">
+            <mat-label>Категория</mat-label>
+            <mat-select (selectionChange)="onCategoryChange($event)">
+              <mat-option
+                *ngFor="let category of Object.values(categories)"
+                [value]="category.id"
+              >
+                {{ category.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div *ngIf="transactionTypeControl.value === 'transfer'">
+          <mat-form-field class="form__control">
+            <mat-label>Откуда</mat-label>
+            <mat-select #accountIncome (selectionChange)="onAccountIncomeChange($event)">
+              <mat-option
+                *ngFor="let account of accounts"
+                [value]="account"
+              >
+                {{ account.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="form__control">
+            <mat-label>
+              <span>
+                Сумма снятия
+              </span>
+              <span *ngIf="accountIncome?.value">
+                {{ currencies[accountIncome?.value.currencyId].name }}
+              </span>
+            </mat-label>
+            <input matInput type="number" formControlName="income">
+          </mat-form-field>
+
+          <mat-form-field class="form__control">
+            <mat-label>Куда</mat-label>
+            <mat-select #accountOutcome (selectionChange)="onAccountOutcomeChange($event)">
+              <mat-option
+                *ngFor="let account of accounts"
+                [value]="account"
+              >
+                {{ account.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="form__control">
+            <mat-label>
+              <span>
+                Сумма пополнения
+              </span>
+              <span *ngIf="accountOutcome?.value">
+                {{ currencies[accountOutcome?.value.currencyId].name }}
+              </span>
+            </mat-label>
+            <input matInput type="number" formControlName="outcome">
+          </mat-form-field>
+        </div>
+
+        <mat-form-field class="form__control form__control_date">
           <mat-label>Дата</mat-label>
           <input matInput [matDatepicker]="datePicker" formControlName="createdAt">
           <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
           <mat-datepicker #datePicker></mat-datepicker>
         </mat-form-field>
-
-        <div>
-          <div *ngIf="transactionTypeControl.value !== 'transfer'">
-            <div class="form__control-group">
-              <mat-form-field class="form__control">
-                <mat-label>
-                  <span>Счет</span>
-                </mat-label>
-                <mat-select
-                  #account
-                  (selectionChange)="onAccountChange($event)"
-                >
-                  <mat-option
-                    *ngFor="let account of accounts"
-                    [value]="account"
-                  >
-                    {{ account.name }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-
-            <mat-form-field class="form__control">
-              <mat-label>
-                <span>
-                  Сумма
-                </span>
-                <span *ngIf="account?.value">
-                  {{ currencies[account?.value.currencyId].name }}
-                </span>
-              </mat-label>
-              <input *ngIf="transactionTypeControl.value === 'incomes'" matInput type="number" formControlName="income">
-              <input *ngIf="transactionTypeControl.value === 'expenses'" matInput type="number" formControlName="outcome">
-            </mat-form-field>
-  
-            <div class="form__control-group">
-              <mat-form-field class="form__control" *ngIf="categories">
-                <mat-label>Категория</mat-label>
-                <mat-select
-                  (selectionChange)="onCategoryChange($event)"
-                >  
-                  <mat-option
-                    *ngFor="let category of Object.values(categories)"
-                    [value]="category.id"
-                  >
-                    {{ category.name }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-  
-          </div>
-  
-          <div *ngIf="transactionTypeControl.value === 'transfer'">
-            <mat-form-field class="form__control">
-              <mat-label>Откуда</mat-label>
-              <mat-select #accountIncome (selectionChange)="onAccountIncomeChange($event)">
-                <mat-option
-                  *ngFor="let account of accounts"
-                  [value]="account"
-                >
-                  {{ account.name }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-  
-            <mat-form-field class="form__control">
-              <mat-label>
-                <span>
-                  Сумма снятия
-                </span>
-                <span *ngIf="accountIncome?.value">
-                  {{ currencies[accountIncome?.value.currencyId].name }}
-                </span>
-              </mat-label>
-              <input matInput type="number" formControlName="income">
-            </mat-form-field>
-  
-            <mat-form-field class="form__control">
-              <mat-label>Куда</mat-label>
-              <mat-select #accountOutcome (selectionChange)="onAccountOutcomeChange($event)">
-                <mat-option
-                  *ngFor="let account of accounts"
-                  [value]="account"
-                >
-                  {{ account.name }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-  
-            <mat-form-field class="form__control">
-              <mat-label>
-                <span>
-                  Сумма пополнения
-                </span>
-                <span *ngIf="accountOutcome?.value">
-                  {{ currencies[accountOutcome?.value.currencyId].name }}
-                </span>
-              </mat-label>
-              <input matInput type="number" formControlName="outcome">
-            </mat-form-field>
-          </div>
-  
-        </div>
   
         <div class="form__buttons">
           <button
@@ -163,11 +149,7 @@
             Добавить
           </button>
         </div>
-  
       </form>
-  
     </div>
-
   </mat-card-content>
-
 </mat-card>
