--- a/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.html
+++ b/frontend/src/app/modules/+transactions/components/transactions-filter/transactions-filter.component.html
@@ -24,6 +24,7 @@
       <mat-list-option
         *ngFor="let account of accounts"
         [value]="account.id"
+        [selected]="true"
       >
         {{ account.name }}
       </mat-list-option>
