[Frontend] Add account editing

--- a/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.html
+++ b/frontend/src/app/modules/+accounts/containers/accounts-container/accounts-container.component.html
@@ -17,6 +17,9 @@
             </span>
           </a>
 
+          <button mat-icon-button (click)="onEditAccount(account)">
+            <mat-icon>edit</mat-icon>
+          </button>
           <button mat-icon-button (click)="onDeleteAccount(account.id)">
             <mat-icon>delete</mat-icon>
           </button>
