[Frontend] Restore lint staged

--- a/frontend/src/app/modules/+transactions/containers/transactions-container/transactions-container.component.scss
+++ b/frontend/src/app/modules/+transactions/containers/transactions-container/transactions-container.component.scss
@@ -1,13 +1,13 @@
 .transactions {
-  padding: 16px;
+  padding: 1.6rem;
 
   &__add-transaction {
-    margin-bottom: 16px;
+    margin-bottom: 1.6rem;
   }
 
   &__main {
     flex: 1;
-    margin-left: 16px;
+    margin-left: 1.6rem;
   }
 
   &__wrapper {
